cmake_minimum_required(VERSION 3.22)
project(untitled1)
find_package(OpenCV)
find_package(Eigen3)
include_directories(sophus)
set(CMAKE_CXX_STANDARD 14)
include_directories(${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
add_executable(untitled1 main.cpp )
target_link_libraries(untitled1 ${OpenCV_LIBS})
